minor alignment fixes

--- a/css/style.css
+++ b/css/style.css
@@ -2315,7 +2315,7 @@ div.tab-frame input:nth-of-type(2):checked ~ .tab:nth-of-type(2),
 div.tab-frame input:nth-of-type(3):checked ~ .tab:nth-of-type(3){ display:block;}
 
 .mar{
-    margin-left: 25vw !important;
+    margin-left: 24.5vw !important;
 }
 
 .w3-animate-opacity{animation:opac 1.5s}@keyframes opac{from{opacity:0} to{opacity:1}}
